// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.addQuestionnaireStepMutation admin project should be able to add questionnaire step. 1`] = `
Object {
  "addQuestionnaireStep": Object {
    "step": Object {
      "__typename": "QuestionnaireStep",
      "body": "Répondez à l'enquête",
      "collectParticipantsEmail": true,
      "enabled": true,
      "isAnonymousParticipationAllowed": true,
      "label": "Questionnaire",
      "questionnaire": Object {
        "creator": Object {
          "username": "Théo QP",
        },
        "description": "Répondez à l'enquête",
        "owner": Object {
          "username": "Théo QP",
        },
        "questions": Array [
          Object {
            "position": 1,
            "title": "Avez-vous une remarque à apporter ?",
            "type": "textarea",
          },
        ],
        "title": "Questionnaire",
      },
      "title": "",
    },
  },
}
`;

exports[`mutations.addQuestionnaireStepMutation admin should be able to add questionnaire step. 1`] = `
Object {
  "addQuestionnaireStep": Object {
    "step": Object {
      "__typename": "QuestionnaireStep",
      "body": "Répondez à l'enquête",
      "collectParticipantsEmail": true,
      "enabled": true,
      "isAnonymousParticipationAllowed": true,
      "label": "Questionnaire",
      "questionnaire": Object {
        "creator": Object {
          "username": "admin",
        },
        "description": "Répondez à l'enquête",
        "owner": Object {
          "username": "admin",
        },
        "questions": Array [
          Object {
            "position": 1,
            "title": "Avez-vous une remarque à apporter ?",
            "type": "textarea",
          },
        ],
        "title": "Questionnaire",
      },
      "title": "",
    },
  },
}
`;

exports[`mutations.addQuestionnaireStepMutation orga member should be able to add questionnaire step. 1`] = `
Object {
  "addQuestionnaireStep": Object {
    "step": Object {
      "__typename": "QuestionnaireStep",
      "body": "Répondez à l'enquête",
      "collectParticipantsEmail": true,
      "enabled": true,
      "isAnonymousParticipationAllowed": true,
      "label": "Questionnaire",
      "questionnaire": Object {
        "creator": Object {
          "username": "Christophe Cassou",
        },
        "description": "Répondez à l'enquête",
        "owner": Object {
          "username": "GIEC",
        },
        "questions": Array [
          Object {
            "position": 1,
            "title": "Avez-vous une remarque à apporter ?",
            "type": "textarea",
          },
        ],
        "title": "Questionnaire",
      },
      "title": "",
    },
  },
}
`;
